Fix all absolute paths and add missing CSS/JS links

--- a/vehicles.html
+++ b/vehicles.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QLKT Nội Bài - Thư mục Lý lịch thiết bị</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -501,13 +501,13 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a></li>
-                    <li><a href="personnel.html"><i class="fas fa-users"></i> <span>Nhân sự</span></a></li>
-                    <li><a href="vehicles.html"><i class="fas fa-car"></i> <span>Phương tiện</span></a></li>
-                    <li><a href="equipment-directory.html" class="active"><i class="fas fa-folder"></i> <span>Lý lịch thiết bị</span></a></li>
-                    <li><a href="ils.html"><i class="fas fa-satellite-dish"></i> <span>Hệ thống ILS</span></a></li>
-                    <li><a href="ndb.html"><i class="fas fa-broadcast-tower"></i> <span>Hệ thống NDB</span></a></li>
-                    <li><a href="index.html"><i class="fas fa-sign-out-alt"></i> <span>Đăng xuất</span></a></li>
+                    <li><a href="/dashboard.html"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a></li>
+                    <li><a href="/personnel.html"><i class="fas fa-users"></i> <span>Nhân sự</span></a></li>
+                    <li><a href="/vehicles.html"><i class="fas fa-car"></i> <span>Phương tiện</span></a></li>
+                    <li><a href="/equipment-directory.html" class="active"><i class="fas fa-folder"></i> <span>Lý lịch thiết bị</span></a></li>
+                    <li><a href="/ils.html"><i class="fas fa-satellite-dish"></i> <span>Hệ thống ILS</span></a></li>
+                    <li><a href="/ndb.html"><i class="fas fa-broadcast-tower"></i> <span>Hệ thống NDB</span></a></li>
+                    <li><a href="/index.html"><i class="fas fa-sign-out-alt"></i> <span>Đăng xuất</span></a></li>
                 </ul>
             </nav>
         </div>
@@ -1271,3 +1271,4 @@
     </script>
 </body>
 </html>
+
