--- a/ils.html
+++ b/ils.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hệ thống ILS - Chương trình Quản lý kỹ thuật - Đội Thiết bị thông tin dẫn đường</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* Page specific styles */
@@ -1369,3 +1369,4 @@
     </script>
 </body>
 </html>
+
