--- a/personal.html
+++ b/personal.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
@@ -1579,3 +1579,4 @@
     </script>
 </body>
 </html>
+
