--- a/index.html
+++ b/index.html
@@ -973,10 +973,10 @@
                     <div class="stats-grid">
                         <div class="stat-item">
                             <div class="stat-number">112</div>
-                            <div class="stat-label">T?ng thi?t b?</div>
+                            <div class="stat-label">T?ng CCDC</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number">108</div>
+                            <div class="stat-number">112</div>
                             <div class="stat-label">Ho?t d?ng t?t</div>
                         </div>
                         <div class="stat-item">
@@ -1274,7 +1274,7 @@
                     <div class="footer-info">
                         <div class="info-item">
                             <i class="fas fa-phone"></i>
-                            <span>Hotline: <strong>(+84) 919 926 586</strong></span>
+                            <span>Hotline: <strong>(+84) 919 92x x86</strong></span>
                         </div>
                         <div class="info-item">
                             <i class="fas fa-envelope"></i>
@@ -1291,15 +1291,15 @@
                     <div class="footer-info">
                         <div class="info-item">
                             <i class="fas fa-code"></i>
-                            <span>Phiên b?n: <strong>2.2.0</strong></span>
+                            <span>Phiên b?n: <strong>1.0.0</strong></span>
                         </div>
                         <div class="info-item">
                             <i class="fas fa-calendar-check"></i>
-                            <span>C?p nh?t: <strong>19/12/2024</strong></span>
+                            <span>C?p nh?t: <strong>19/12/2025</strong></span>
                         </div>
                         <div class="info-item">
                             <i class="fas fa-database"></i>
-                            <span>Thi?t b?: <strong>112</strong> | S? lý l?ch: <strong>112</strong></span>
+                            <span>CCDC: <strong>112</strong> | Tổng CCDC: <strong>112</strong></span>
                         </div>
                     </div>
                 </div>
@@ -1424,7 +1424,7 @@
             
             // Hi?n th? thông tin h? th?ng
             console.log('H? th?ng qu?n lý k? thu?t - Sân bay N?i Bài');
-            console.log('Phiên b?n: 2.2.0');
+            console.log('Phiên b?n: 1.0.1');
             console.log('Tính nang: T? d?ng c?p nh?t lý l?ch thi?t b? khi b?o trì/s?a ch?a');
             console.log('M?i thi?t b? có s? lý l?ch riêng v?i l?ch s? d?y d?');
             
@@ -1509,6 +1509,7 @@
     </script>
 <script src="/script.js"></script><script src="/vehicles.js"></script></body>
 </html>
+
 
 
 
