--- a/personal.html
+++ b/personal.html
@@ -1044,7 +1044,7 @@
                 idCard: "010075000120",
                 idCardDate: "10/07/2021",
                 phone: "0769856555",
-                specialty: "HLV Bảo dưỡng, sửa chữa trang thiết bị ILS/DME/Marker và NDB",
+                specialty: "HLV Khai thác, bảo dưỡng trang thiết bị ILS/DME/ALS",
                 note: "",
                 avatar: null,
                 avatarColor: "#e74c3c"
@@ -1068,7 +1068,7 @@
                 idCard: "001082014736",
                 idCardDate: "19/02/2022",
                 phone: "0989649113",
-                specialty: "HLV Bảo dưỡng, sửa chữa trang thiết bị ILS/DME/Marker và NDB",
+                specialty: "Bảo dưỡng, sửa chữa trang thiết bị ILS/DME/Marker và NDB",
                 note: "",
                 avatar: null,
                 avatarColor: "#f39c12"
@@ -2851,4 +2851,5 @@
     </script>
 </body>
 </html>
+
 
