--- a/personal.html
+++ b/personal.html
@@ -940,7 +940,7 @@
             "Phó chủ tịch CĐCS",
             "Ủy viên BCH CĐCS",
             "Chủ tịch CĐCSTV",
-            "Phó chủ tịch CĐCSTV",
+            "Phó chủ tịch CĐCSTV/Chủ tịch Công đoàn bộ phận",
             "Ủy viên BCH CĐCSTV",
             "Chủ tịch công đoàn bộ phận",
             "Phó Chủ tịch công đoàn bộ phận",
@@ -2851,5 +2851,6 @@
     </script>
 </body>
 </html>
+
 
 
