--- a/ils.html
+++ b/ils.html
@@ -546,7 +546,7 @@
             <div class="footer-info">
                 <div class="contact-info">
                     <h4><i class="fas fa-headset"></i> HỖ TRỢ KỸ THUẬT ILS</h4>
-                    <p><i class="fas fa-phone"></i> Hotline: <strong>0912 xxx xxx</strong></p>
+                    <p><i class="fas fa-phone"></i> Hotline: <strong>0919 xxx x86</strong></p>
                     <p><i class="fas fa-envelope"></i> Email: <strong>naoc.cns@gmail.com</strong></p>
                 </div>
                 <div class="system-info">
@@ -581,7 +581,7 @@
                 status: "active",
                 nextInspection: "10/06/2025",
                 location: "Khu vực ILS 11L",
-                personInCharge: "Lê Văn Quang",
+                personInCharge: "Nguyễn Tuấn Anh",
                 angle: "3°",
                 range: "25NM"
             },
@@ -598,7 +598,7 @@
                 status: "active",
                 nextInspection: "20/04/2025",
                 location: "Khu vực ILS 29R",
-                personInCharge: "Nguyễn Mạnh Cường",
+                personInCharge: "Nguyễn Tuấn Anh",
                 angle: "3°",
                 range: "25NM"
             },
@@ -617,7 +617,7 @@
                 status: "active",
                 nextInspection: "15/05/2025",
                 location: "Khu vực ILS 11R",
-                personInCharge: "Nguyễn Văn Long",
+                personInCharge: "Nguyễn Tuấn Anh",
                 angle: "3°",
                 range: "25NM"
             },
@@ -634,7 +634,7 @@
                 status: "maintenance",
                 nextInspection: "15/03/2025",
                 location: "Khu vực ILS 29L",
-                personInCharge: "Nguyễn Ngọc Linh",
+                personInCharge: "Nguyễn Tuấn Anh",
                 angle: "3°",
                 range: "25NM"
             },
@@ -653,7 +653,7 @@
                 status: "active",
                 nextInspection: "22/07/2025",
                 location: "Khu vực Glidepath 11L",
-                personInCharge: "Trần Văn Hải",
+                personInCharge: "Nguyễn Tuấn Anh",
                 angle: "3°",
                 range: "10NM"
             },
@@ -670,7 +670,7 @@
                 status: "active",
                 nextInspection: "10/08/2025",
                 location: "Khu vực Glidepath 29R",
-                personInCharge: "Lê Minh Tuấn",
+                personInCharge: "Nguyễn Tuấn Anh",
                 angle: "3°",
                 range: "10NM"
             },
@@ -689,7 +689,7 @@
                 status: "active",
                 nextInspection: "18/06/2025",
                 location: "Khu vực Glidepath 11R",
-                personInCharge: "Phạm Đình Dũng",
+                personInCharge: "Nguyễn Tuấn Anh",
                 angle: "3°",
                 range: "10NM"
             },
@@ -706,7 +706,7 @@
                 status: "active",
                 nextInspection: "05/09/2025",
                 location: "Khu vực Glidepath 29L",
-                personInCharge: "Nguyễn Hoàng Nam",
+                personInCharge: "Nguyễn Tuấn Anh",
                 angle: "3°",
                 range: "10NM"
             },
@@ -725,7 +725,7 @@
                 status: "active",
                 nextInspection: "22/08/2025",
                 location: "Khu vực ILS 11L",
-                personInCharge: "Lê Văn Quang"
+                personInCharge: "Nguyễn Tuấn Anh"
             },
             {
                 id: 10,
@@ -740,7 +740,7 @@
                 status: "active",
                 nextInspection: "10/09/2025",
                 location: "Khu vực ILS 29R",
-                personInCharge: "Nguyễn Mạnh Cường"
+                personInCharge: "Nguyễn Tuấn Anh"
             },
             
             // DMEs - Đường băng 11R/29L
@@ -757,7 +757,7 @@
                 status: "active",
                 nextInspection: "18/07/2025",
                 location: "Khu vực ILS 11R",
-                personInCharge: "Nguyễn Văn Long"
+                personInCharge: "Nguyễn Tuấn Anh"
             },
             {
                 id: 12,
@@ -772,7 +772,7 @@
                 status: "active",
                 nextInspection: "05/10/2025",
                 location: "Khu vực ILS 29L",
-                personInCharge: "Nguyễn Ngọc Linh"
+                personInCharge: "Nguyễn Tuấn Anh"
             },
             
             // MARKERS - Đường băng 11L/29R (Chỉ ở đầu 11L)
@@ -789,7 +789,7 @@
                 status: "active",
                 nextInspection: "12/05/2025",
                 location: "Khu vực Marker 11L",
-                personInCharge: "Khúc Trường Sơn"
+                personInCharge: "Nguyễn Tuấn Anh"
             },
             {
                 id: 14,
@@ -804,7 +804,7 @@
                 status: "active",
                 nextInspection: "15/06/2025",
                 location: "Khu vực Marker 11L",
-                personInCharge: "Khúc Trường Sơn"
+                personInCharge: "Phạm Minh Quang"
             }
         ];
 
@@ -1239,7 +1239,7 @@
                         </div>
                         <div style="display: flex; margin-bottom: 10px;">
                             <div style="font-weight: bold; min-width: 150px;">Liên hệ:</div>
-                            <div>0912 xxx xxx</div>
+                            <div>0919926586</div>
                         </div>
                     </div>
                 </div>
@@ -1369,4 +1369,5 @@
     </script>
 </body>
 </html>
+
 
