--- a/index.html
+++ b/index.html
@@ -1314,11 +1314,11 @@
                             </div>
                             <div class="menu-content">
                                 <h4>HỆ THỐNG ILS</h4>
-                                <p>Hệ thống hạ cánh bằng thiết bị</p>
+                                <p>Hệ thống hạ cánh chính xác bằng thiết bị</p>
                             </div>
                             <div class="menu-status">
                                 <div class="status-dot status-active"></div>
-                                <span class="status-text">10 thiết bị</span>
+                                <span class="status-text">14 thiết bị</span>
                             </div>
                         </a>
                         
@@ -1521,7 +1521,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>© 2025 Đội thiết bị thông tin dẫn đường - Trung tâm Khai thác khu bay Nội Bài.</p>
+                <p>© 2025 Bản quyền thuộc Đội thiết bị thông tin dẫn đường - Trung tâm Khai thác khu bay Nội Bài.</p>
             </div>
         </footer>
     </div>
@@ -2008,3 +2008,4 @@
     </script>
 </body>
 </html>
+
