--- a/index.html
+++ b/index.html
@@ -1753,7 +1753,7 @@
             },
             'kỹthuật@nội-bài.com.vn': { 
                 password: 'tech2024', 
-                name: 'Nguyễn Văn Kỹ Thuật', 
+                name: 'Bộ phận trực kỹ thuật', 
                 role: 'Kỹ thuật viên',
                 permissions: ['view', 'search', 'reports']
             },
@@ -2589,3 +2589,4 @@
     </script>
 </body>
 </html>
+
