--- a/index.html
+++ b/index.html
@@ -1745,19 +1745,19 @@
         
         // User accounts (trong thực tế nên lưu trên server)
         const USERS = {
-            'admin@nội-bài.com.vn': { 
+            'naoc.cns@gmail.com': { 
                 password: 'admin123', 
                 name: 'Quản trị viên', 
                 role: 'Admin',
                 permissions: ['all']
             },
-            'kỹthuật@nội-bài.com.vn': { 
+            'naoc.cns@gmail.com': { 
                 password: 'tech2025', 
                 name: 'Bộ phận trực kỹ thuật', 
                 role: 'Kỹ thuật viên',
                 permissions: ['view', 'search', 'reports']
             },
-            'xem@nội-bài.com.vn': { 
+            'naoc.cnsm@gmail.com': { 
                 password: 'viewonly', 
                 name: 'Nhân viên xem', 
                 role: 'Người dùng xem',
@@ -2589,5 +2589,6 @@
     </script>
 </body>
 </html>
+
 
 
