--- a/ndb.html
+++ b/ndb.html
@@ -1311,7 +1311,7 @@
         // Admin mode state
         let isAdminMode = false;
         let nextId = 3; // For new NDBs
-        const ADMIN_PASSWORD = "Naoc@Cns"; // Mật khẩu admin
+        const ADMIN_PASSWORD = "admin123"; // Mật khẩu admin
         let loginAttempts = 3; // Giới hạn số lần đăng nhập sai
         
         // Signal monitoring variables
@@ -2286,4 +2286,5 @@
     </script>
 </body>
 </html>
+
 
